--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "supervisor ./bin/www"
+    "start": "supervisor app.js"
   },
   "dependencies": {
     "cookie-parser": "~1.4.3",
@@ -12,7 +12,11 @@
     "express": "~4.16.0",
     "hbs": "~4.0.1",
     "http-errors": "~1.6.2",
+    "lodash": "latest",
     "morgan": "~1.9.0",
-    "robinhood": "^1.6.4"
+    "promise": "latest",
+    "query-string": "latest",
+    "request": "^2.88.0",
+    "request-promise": "^4.2.2"
   }
 }
